envoy/envoy.yaml
node:
  cluster: service_greeter
  id: test-id

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8081 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_spring_grpc
            request_headers_to_add:
            - header:
                key: downstream_peer_fingerprint
                value: "%DOWNSTREAM_PEER_FINGERPRINT_256%"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true
          common_tls_context:
            alpn_protocols: [ "h2,http/1.1" ]
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/peer.pem
              private_key:
                filename: /etc/envoy/peer-key.pem
              # ocsp_staple:
              #   filename: certs/http_server_ocsp_resp_valid.bin
              #   filename: certs/http_server_ocsp_resp_revoked.bin                
            validation_context:
              only_verify_leaf_cert_crl: true
              trusted_ca:
                filename: /etc/envoy/ca-chain.pem                
              # crl:
              #  filename: certs/tls-ca-valid.crl
              #  filename: certs/tls-ca-revoked.crl                
            # validation_context:             
            #   verify_certificate_spki:
            #   - "0FDpHG3vRLuRng8gkBA9UB0pbr3MUQ48EA16LqjsEzY=" 

  clusters:
  - name: service_spring_grpc
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service_spring_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: spring-grpc
                port_value: 9090
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /etc/envoy/peer.pem
            private_key:
              filename: /etc/envoy/peer-key.pem
          validation_context:
            only_verify_leaf_cert_crl: true
            trusted_ca:
              filename: /etc/envoy/ca-chain.pem
